<resources>
    <string name="app_name">Library</string>

    <!-- Rating -->

    <string name="what_do_you_think">Enjoying %s?</string>
    <string name="feedback_positive">Yes!</string>
    <string name="feedback_negative">Not really</string>

    <string name="text_review">How about a rating on the Play Store then?</string>
    <string name="leave_review">Ok, sure</string>
    <string name="no_thanks">No, thanks</string>

    <string name="text_feedback">Would you mind giving us some feedback?</string>
    <string name="send_feedback">Ok, sure</string>

    <string name="feedback_chooser">Send feedback via</string>
    <string name="feedback_subject">Feedback</string>


    <!-- Invite -->
    <string name="invite_text">Would you like to help us grow?</string>
    <string name="invite_action_negative">Not really</string>
    <string name="invite_action_positive">Ok, sure</string>
    <string name="invite_via">Tell your friends about us, via</string>
    <string name="invite_default_text" formatted="false">I just tried %s, and it\'s awesome! Check it out %s</string>

</resources>
