<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/text_review"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_review_no_thanks"
            style="@style/AppViralityButton"
            android:text="@string/no_thanks" />

        <View
            android:layout_width="48dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/button_leave_review"
            style="@style/AppViralityButton"
            android:text="@string/leave_review" />

    </LinearLayout>


</LinearLayout>